@startuml OneC_LogErr Entity Classes

header xs.badyanov.onec_logerr.entity

'=== Entity ===

class OneCError {
    <<Entity>>
    --
    -Long id <<PK>>
    -UUID errorId <<Unique>>
    -Instant time /' Время в формате Unix time '/
    -ClientInfo clientInfo <<Embedded>>
    -SessionInfo sessionInfo <<Embedded>>
    -InfoBaseInfo infoBaseInfo <<Embedded>>
    -ServerInfo serverInfo <<Embedded>>
    -ConfigInfo configInfo <<Embedded>>
    -ErrorInfo errorInfo <<Embedded>>
    -BinaryFile screenshot <<FK, Nullable>>
    -String additionalData /' дополнительные данные в формате JSON '/
    -List<BinaryFile> additionalFiles <<OneToMany>>
    -Dump dump <<FK, Nullable>>
    --
    +OneCError()
    +getters()
    +setters()
}

class ClientInfo {
    <<Embeddable>>
    --
    -String platformType /' Свойство 'СистемнаяИнформация.ТипПлатформы' в английском варианте написания '/
    -String appVersion /' Свойство 'СистемнаяИнформация.ВерсияПриложения' '/
    -String appName /' Метод ИмяПриложения(). Также может быть BackgroundJob или HTTPServiceConnection '/
    -SystemInfo systemInfo <<Embedded>>
    --
    +ClientInfo()
    +getters()
    +setters()
}

class SystemInfo {
    <<Embeddable>>
    --
    -String osVersion /' Свойство 'СистемнаяИнформация.ВерсияОС' '/
    -Long fullRAM /' Всего оперативной памяти '/
    -Long freeRAM /' Свободно оперативной памяти '/
    -String processor /' Свойство 'СистемнаяИнформация.Процессор' '/
    -String useragent /' user-agent текущего веб-браузера (свойство 'СистемнаяИнформация.ИнформацияПрограммыПросмотра') '/
    -String clientID /' Свойство 'СистемнаяИнформация.ИдентификаторКлиента' '/
    --
    +SystemInfo()
    +getters()
    +setters()
}

class SessionInfo {
    <<Embeddable>>
    --
    -String userName
    -String dataSeparation /' Значения разделителей текущего сеанса '/
    -String platformInterfaceLanguageCode /' Строка с кодом языка интерфейса '/
    -String configurationInterfaceLanguageCode /' Строка с кодом языка конфигурации для текущего пользователя '/
    -String localeCode /' Строка с кодом локализации сеанса (метод ТекущийКодЛокализации()) '/
    --
    +SessionInfo()
    +getters()
    +setters()
}

class InfoBaseInfo {
    <<Embeddable>>
    --
    -String localeCode /' Строка с кодом локализации информационной базы (метод КодЛокализацииИнформационнойБазы()) '/
    --
    +InfoBaseInfo()
    +getters()
    +setters()
}

class ServerInfo {
    <<Embeddable>>
    --
    -String platformType /' Свойство 'СистемнаяИнформация.ТипПлатформы' в английском варианте написания '/
    -String appVersion /' Версия кластера серверов (в виде строки) (свойство 'СистемнаяИнформация.ВерсияПриложения') '/
    -String dbms /' Тип СУБД '/
    --
    +ServerInfo()
    +getters()
    +setters()
}

class ConfigInfo {
    <<Embeddable>>
    --
    -String name
    -String description
    -String version
    -String compatibilityMode /' Режим совместимости конфигурации (свойство РежимСовместимости) '/
    -String hash /' Хеш конфигурации (в формате MD5) '/
    -Boolean changeEnabled /' Возможность изменения конфигурации '/
    -List<Extension> extensions <<ElementCollection>>
    -List<Extension> disabledExtensions <<ElementCollection>>
    --
    +ConfigInfo()
    +getters()
    +setters()
}

class ErrorInfo {
    <<Embeddable>>
    --
    -String userDescription /' Описание, написанное пользователем. Отсутствует, если отчет об ошибке сформирован на сервере. '/
    -SystemErrorInfo systemErrorInfo <<Embedded>> /' Информация об ошибке, относящаяся к платформе «1С:Предприятие» '/
    -ApplicationErrorInfo applicationErrorInfo <<Embedded>> /' Информация об ошибке, относящаяся к прикладному решению '/
    --
    +ErrorInfo()
    +getters()
    +setters()
}

class SystemErrorInfo {
    <<Embeddable>>
    --
    -String clientStack /' Текст стека клиентского приложения. Отсутствует, если отчет об ошибке сформирован на сервере '/
    -String clientStackHash /' Хеш текста стека клиентского приложения в формате MD5 '/
    -String serverStack /' Текст стека кластера серверов '/
    -String serverStackHash /' Хеш текста стека кластера серверов в формате MD5 '/
    -Boolean systemCrash /' Признак того, что отчет об ошибке формируется в результате аварийного завершения работы клиентского приложения '/
    --
    +SystemErrorInfo()
    +getters()
    +setters()
}

class ApplicationErrorInfo {
    <<Embeddable>>
    --
    -List<ErrorDescription> errors <<ElementCollection>>
    -List<StackDescription> stack <<ElementCollection>>
    -String stackHash
    --
    +ApplicationErrorInfo()
    +getters()
    +setters()
}

class BinaryFile {
    <<Entity>>
    --
    -Long id <<PK>>
    -String storagePath <<Unique>> /' Путь к файлу в хранилище '/
    -String originalFileName /' имя файла '/
    -Long fileSize
    -String mimeType
    --
    +BinaryFile()
    +getters()
    +setters()
}

class Dump {
    <<Entity>>
    --
    -Long id <<PK>>
    -String type /' тип дампа (аналогичен значению атрибута type элемента dump файла logcfg.xml) '/
    -String reasonForNoDump /' причина, по которой дамп не сформирован: genericFailure, userRefused, insufficientResources '/
    -BinaryFile file <<FK>>
    --
    +Dump()
    +getters()
    +setters()
}

class Extension {
    <<Embeddable>>
    --
    -String name
    -String hash
    --
    +Extension()
    +getters()
    +setters()
}

class ErrorDescription {
    <<Embeddable, Record>>
    --
    -String description
    -String category
}

class StackDescription {
    <<Embeddable, Record>>
    --
    -String moduleName /' Имя модуля '/
    -Integer lineNumber /' Номер строки '/
    -String lineContent /' Содержимое строки кода '/
}

'=== Relationships ===

' OneCError has direct relationships with other Entities
OneCError "1" *-- "0..1" BinaryFile : "screenshot"
OneCError "1" *-- "0..*" BinaryFile : "additionalFiles"
OneCError "1" *-- "0..1" Dump : "dump"
Dump "1" *-- "0..1" BinaryFile : "file"

' Element Collections are represented as aggregations
ConfigInfo o-- "0..*" Extension : "extensions"
ConfigInfo o-- "0..*" Extension : "disabledExtensions"
ApplicationErrorInfo o-- "*" ErrorDescription : "errors"
ApplicationErrorInfo o-- "*" StackDescription : "stack"


'=== STYLING ===

' General
skinparam handwritten false
skinparam shadowing true
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam roundcorner 10

' Colors
!define ENTITY_BG #E8F5E9
!define ENTITY_BORDER #4CAF50
!define EMBEDDABLE_BG #E0F7FA
!define EMBEDDABLE_BORDER #00BCD4
!define EMBEDDED_BG #FFF9C4
!define PK_BG #FFEBEE
!define FK_BG #FFFDE7

' Arrow color
skinparam ArrowColor ENTITY_BORDER

' Stereotypes
skinparam class<<Entity>> {
    BackgroundColor ENTITY_BG
    BorderColor ENTITY_BORDER
}
skinparam class<<Embeddable>> {
    BackgroundColor EMBEDDABLE_BG
    BorderColor EMBEDDABLE_BORDER
}
skinparam class<<Record>> {
    BackgroundColor EMBEDDABLE_BG
    BorderColor EMBEDDABLE_BORDER
}

skinparam classAttributeStereotype<<PK>>BackgroundColor PK_BG
skinparam classAttributeStereotype<<FK>>BackgroundColor FK_BG
skinparam classAttributeStereotype<<Embedded>>BackgroundColor EMBEDDED_BG
skinparam classAttributeStereotype<<ElementCollection>>BackgroundColor EMBEDDED_BG
skinparam classAttributeStereotype<<Nullable>>FontColor #757575
skinparam classAttributeStereotype<<Nullable>>FontStyle italic

@enduml
